--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: sort_strings
 description: A starting point for Dart libraries or applications.
 version: 1.0.0
-repository: https://github.com/my_org/my_repo
+repository: https://github.com/AkmaljonAbdirakhimov/sort_strings
+homepage: https://github.com/AkmaljonAbdirakhimov/sort_strings
 
 environment:
   sdk: ^3.5.3
