--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: sort_strings
-description: A starting point for Dart libraries or applications.
+description: This package is used to sort strings in ascending or descending order.
 version: 1.0.0
+
 repository: https://github.com/AkmaljonAbdirakhimov/sort_strings
 homepage: https://github.com/AkmaljonAbdirakhimov/sort_strings
 
@@ -14,3 +15,6 @@ dependencies:
 dev_dependencies:
   lints: ^4.0.0
   test: ^1.24.0
+
+
+license: MIT
